<resources>
    <string name="app_name">LoL App</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>


    <!--  PerfilInfoFragment  -->
    <!-- ###################### -->

    <string name="campeones_mas_jugados">Campeones mas jugados</string>
    <string name="clasificatorias">Clasificatorias</string>
    <string name="_100_lp" translatable="false">100 LP</string>
    <string name="solo_duo" translatable="false">Solo/Duo</string>
    <string name="aspirante">Aspirante</string>
    <string name="_75_lp" translatable="false">75 LP</string>
    <string name="flex_5v5" translatable="false">Flex 5v5</string>
    <string name="gran_maestro">Gran Maestro</string>

    <!--  PerfilFragment  -->
    <!-- ###################### -->

    <string name="_168" translatable="false">168</string>
    <string name="_21roger" translatable="false">21Roger</string>
    <string name="_235" translatable="false">235</string>

    <!--  FirstScreenFragment  -->
    <!-- ###################### -->

    <string name="lolapp" translatable="false">LoLApp</string>
    <string name="the_league_of_legends_app" translatable="false">The League of Legends App</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="entrar">ENTRAR</string>

    <!--  LogInFragment  -->
    <!-- ###################### -->

    <string name="recuerdame">Recuerdame</string>
    <string name="has_olvidado_la_contrase_a">Has olvidado la contraseña?</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="autenticacion"> Datos no validos </string>

    <!--  RegisterFragment  -->
    <!-- ###################### -->

    <string name="nombre_de_usuario">Nombre de usuario</string>

    <!--  HomeFragment  -->
    <!-- ###################### -->

    <string name="quizes" translatable="false">Quizzes</string>
    <string name="puzzles" translatable="false">Puzzles</string>
    <string name="calendario">Calendario</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="campeones">Campeones</string>


    <!--  Navigation View Menu  -->
    <!-- ###################### -->

    <string name="perfil">Perfil</string>
    <string name="historial_de_partidas">Historial de partidas</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="amigos">Amigos</string>
    <string name="app_info">Sobre esta App</string>
    <string name="salir">Salir</string>
    <string name="esports" translatable="false">eSports</string>
    <string name="objetos">Objetos</string>
    <string name="puntuaciones_quizzes">Puntuaciones quizzes</string>
    <string name="puntuaciones_puzzles">Puntuaciones puzzles</string>

    <!--  PuntuacionesFragment  -->
    <!-- ###################### -->

    <string name="invocador">Invocador</string>
    <string name="puntuaci_n">Puntuación</string>

    <!--  CambiarIdiomaFragment  -->
    <!-- ###################### -->

    <string name="idioma">Idioma</string>
    <string name="espa_ol">Español</string>
    <string name="ingles">Ingles</string>
    <string name="aleman">Aleman</string>
    <string name="frances">Francés</string>
    <string name="italiano">Italiano</string>
    <string name="coreano">Coreano</string>
    <string name="chino">Chino</string>
    <string name="catalan">Catalán</string>
    <string name="volver">VOLVER</string>
    <string name="cerrar_sesion">¿Quieres salir y cerrar sesión?</string>

    <!--  GameTypeFragment  -->
    <!-- ###################### -->

    <string name="como_quieres_jugar">¿Como quieres jugar?</string>
    <string name="comenzando">Comenzando...</string>

    <!--  FriendsFragment  -->
    <!-- ###################### -->

    <string name="lista_de_amigos">Lista de amigos</string>

    <!--  FragmentTags  -->
    <!-- ###################### -->

    <!--<string name="perfilTag">Perfil</string>
    <string name="confirmar_logout">Confirmar logout</string>
    <string name="calendario">Calendario</string>
    <string name="amigosTag">Amigos</string>
    <string name="lista_de_amigos">Lista de amigos</string>-->

    <!--  JavaThings  -->
    <!-- ###################### -->

    <string name="online">En línea</string>
    <string name="offline">Desconectado</string>
    <string name="muy_mal">Muy mal</string>
    <string name="muy_bien">Muy bien</string>

    <string name="sobre_la_app_header"> Sobre la app </string>
    <string name="sobre_la_app"> Para los jugadores de League of Legends que quieran seguir conectados al juego y a sus amigos cuando estén inactivos.
                                ESPORTS A UN TOQUE
                                Si lo que quieres ver es el LEC y la LCS te hace decir ꞌꞌSÍꞌꞌ o la LCK te hace gritar de emoción, entonces tenemos lo que buscas. Mantente al tanto de las posiciones,
                                mira las partidas y obtén recompensas por hacerlo desde la aplicación.\n\n

                                TODO EL CONTENIDO DE LOL QUE DESEAS
                                Sé la primera persona en enterarse del campeón, la actualización del juego o del streamer de LoL más reciente. Recibe notificaciones para ser siempre de los primeros en enterarse
                                de los acontecimientos importantes del mundo de LoL.\n\n

                                CONOCE GENTE Y NO TE PIERDAS NINGUNA PARTIDA
                                Chatea desde el teléfono con tus amigos de LoL, revisa su historial de partidas, analiza o copia sus armados, y no vuelvas jamás a perderte una sala llena de amigos.\n\n

                                La aplicación Amigos de LoL se conecta directamente a tu cuenta y a tu lista de amigos de League of Legends. Crea una cuenta en leagueoflegends.com si no tienes una. </string>

    <string name="funcionalidades_header"> Funcionalidades </string>
    <string name="funcionalidades"> - Jugar a responder preguntas y puzzles\n\n
                                    - Chat para hablar con amigos\n\n
                                    - Calendario para consultar fechas de los partidos competitivos\n\n
                                    - Ver perfil propio y el de amigos </string>

    <string name="detailed_info_header"> Informacion detallada </string>
    <string name="detailed_info_about_the_app"> - Version de la app: 1.1.7af8\n\n
                                    - Latest release date: 29/01/2021\n\n
                                    - Desarrollador de la app: 21Roger\n\n
                                    - App size: 67.20 Mb </string>

</resources>