<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grupoTop">

        <item
            android:id="@+id/action_global_perfilFragment_Perfil"
            android:icon="@drawable/user"
            android:iconTint="#BDBF64"
            android:title="@string/perfil" />

        <item
            android:id="@id/action_global_perfilFragment_History"
            android:icon="@drawable/partidasicon"
            android:iconTint="#BDBF64"
            android:title="@string/historial_de_partidas"
            />

    </group>

    <group
        android:id="@+id/grupoMid">

        <item
            android:id="@+id/cambiarIdiomaFragment"
            android:icon="@drawable/idioma"
            android:iconTint="#BDBF64"
            android:title="@string/cambiar_idioma" />

        <item
            android:id="@+id/verAmigosFragment"
            android:icon="@drawable/amigos"
            android:iconTint="#BDBF64"
            android:title="@string/amigos"
            />

        <item
            android:id="@+id/calendarioFragment"
            android:icon="@drawable/schedulecup"
            android:iconTint="#BDBF64"
            android:title="@string/calendario"/>

    </group>

    <group
        android:id="@+id/grupoBottom">

        <item
            android:id="@+id/appInfoFragment"
            android:icon="@drawable/appinfo"
            android:iconTint="#BDBF64"
            android:title="@string/app_info" />

        <item
            android:id="@+id/confirmarLogoutFragment"
            android:icon="@drawable/salir"
            android:iconTint="#BDBF64"
            android:title="@string/salir" />

    </group>

</menu>