<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0F2D35"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/radioGrupLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espa_ol"
            android:button="@null"
            android:layout_marginTop="10dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingles"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/catalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalan"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aleman"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frances"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/italian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italiano"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coreano"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

        <RadioButton
            android:id="@+id/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chino"
            android:button="@null"
            android:layout_marginTop="17dp"
            android:textSize="23sp"/>

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>