<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoPerfilFragment"
    android:background="#0F2D35"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textCameponesMasJugados"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center_vertical"
            android:text="@string/campeones_mas_jugados"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/masJugadoLee"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mas_jugado_lee"
            android:background="@drawable/background_image_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCameponesMasJugados" />

        <ImageView
            android:id="@+id/masJugadoJarvan"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mas_jugado_jarvan"
            android:background="@drawable/background_image_icon"
            app:layout_constraintLeft_toRightOf="@id/masJugadoLee"
            app:layout_constraintTop_toBottomOf="@id/textCameponesMasJugados" />

        <ImageView
            android:id="@+id/masJugadoYi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mas_jugado_yi"
            android:background="@drawable/background_image_icon"
            app:layout_constraintLeft_toRightOf="@id/masJugadoJarvan"
            app:layout_constraintTop_toBottomOf="@id/textCameponesMasJugados" />

        <ImageView
            android:id="@+id/masJugadoTeemo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mas_jugado_teemo"
            android:background="@drawable/background_image_icon"
            app:layout_constraintLeft_toRightOf="@id/masJugadoYi"
            app:layout_constraintTop_toBottomOf="@id/textCameponesMasJugados" />

        <ImageView
            android:id="@+id/masJugadoJax"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mas_jugado_jax"
            android:background="@drawable/background_image_icon"
            app:layout_constraintLeft_toRightOf="@id/masJugadoTeemo"
            app:layout_constraintTop_toBottomOf="@id/textCameponesMasJugados" />

        <TextView
            android:id="@+id/textClasificatorias"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center_vertical"
            android:text="@string/clasificatorias"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/masJugadoLee" />

        <ImageView
            android:id="@+id/challgerIconPerfil"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/challenger_icon_perfil"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textClasificatorias" />

        <TextView
            android:id="@+id/challengerLPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/_100_lp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textClasificatorias" />

        <LinearLayout
            android:id="@+id/linearChallenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/barrier4"
            app:layout_constraintTop_toBottomOf="@id/textClasificatorias">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/solo_duo"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/aspirante"
                android:textColor="#FFFA8C"
                android:textSize="25sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/grandmasterIconPerfil"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/grandmaster_icon_perfil"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challgerIconPerfil" />

        <TextView
            android:id="@+id/grandmasterLPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/_75_lp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/linearGrandmaster"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linearGrandmaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/barrier4"
            app:layout_constraintTop_toBottomOf="@id/challgerIconPerfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/flex_5v5"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/gran_maestro"
                android:textColor="#FFFA8C"
                android:textSize="25sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="grandmasterIconPerfil,challgerIconPerfil"
            tools:layout_editor_absoluteX="75dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>