<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/navegarAddAmigo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPuntuaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/puntuaciones"
            android:textAlignment="center"
            android:textColor="#F7FFC8"
            android:textSize="40sp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/buscarAmigos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_search_view"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:queryHint="Teemo salvage"
            app:defaultQueryHint="Buscar amigo"
            app:layout_constraintTop_toBottomOf="@id/textPuntuaciones"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invocador"
            android:textSize="20sp"
            android:textColor="#F7FFC8"
            android:fontFamily="@font/ubuntu_medium"
            app:layout_constraintTop_toBottomOf="@id/buscarAmigos"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntuaci_n"
            android:textColor="#F7FFC8"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_medium"
            app:layout_constraintTop_toBottomOf="@id/buscarAmigos"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPuntuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>