<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="168dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutDrawer"
    android:background="#000">

    <ImageView
        android:id="@+id/imagenFondo"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/lee_sin_photo_x44" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#FFF979"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/profilePhotoDrawer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/champion_lee"
            android:background="@drawable/background_image_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/level_number_circle"
            android:gravity="center"
            android:text="@string/_168"
            android:textAlignment="center"
            android:textColor="#F7FFC8"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/profilePhotoDrawer"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/profileTextDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/_21roger"
                android:textColor="#F7FFC8"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/masterypointsicondrawer"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/masterypointsicon"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp" />

            <TextView
                android:id="@+id/masterypointstextdrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_235"
                android:textSize="17sp"
                android:textColor="#F7FFC8"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="3dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>